[package]
name = "ftl"
version = "0.1.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "FTL engine for the web servers"
repository = "https://github.com/HyeonuPark/FTL"
documentation = "https://docs.rs/ftl"
keywords = ["http", "server", "hyper", "ftl"]
categories = ["web-programming::http-server"]
readme = "README.md"

[dependencies]
