[package]
name = "ftl"
version = "0.1.0"
authors = [ "Hyeonu Park <nemo1275@gmail.com>" ]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "FTL engine for the web servers"
repository = "https://github.com/HyeonuPark/FTL"
documentation = "https://docs.rs/ftl"
keywords = [ "http", "server", "hyper", "ftl" ]
categories = [ "web-programming::http-server" ]
readme = "README.md"

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = [ "server" ] }
indexmap = "1.6"
openapiv3 = "0.3.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
strum = { version = "0.20", features = ["derive"]}
thiserror = "1"
tokio = { version = "1", optional = true }

[features]
default = [ "http1", "http2", "tokio-runtime", "ordered-json" ]
http1 = [ "hyper/http1" ]
http2 = [ "hyper/http2" ]
tokio-runtime = [ "tokio", "hyper/runtime" ]
ordered-json = ["serde_json/preserve_order"]
